# esp32-playground

./: .gitignore
c2-std/: Cargo.toml  export-esp.sh
c2-std/.cargo/: config.toml
c2-std/src/: main.rs
c3-no-std/: Cargo.toml
c3-no-std/.cargo/: config.toml
c3-no-std/src/: lib.rs  main.rs
c3-std/: Cargo.toml
c3-std/.cargo/: config.toml
c3-std/src/: lib.rs  main.rs
s3-std/: Cargo.toml  export-esp.sh
