[package]
name = "c3-no-std"
version = "0.1.0"
authors = ["Aleksey Sidorov <sauron1987@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
# [features]
# pio = ["esp-idf-sys/pio"]

[dependencies]
anyhow = { version = "1", default-features = false }
embedded-hal = "1.0.0-alpha.8"
embedded-svc = { version = "0.22.0", default-features = false, features = ["alloc", "use_serde"] }
esp-idf-hal = { version = "0.38", default-features = false, features = ["alloc"] }
esp-idf-svc = { version = "0.42", default-features = false, features = ["alloc"] }
esp-idf-sys = { version = "0.31.6", default-features = false, features = ["binstart", "panic_handler", "alloc_handler"] }
log = { version = "0.4", default-features = false }

[build-dependencies]
anyhow = "1"
embuild = "0.30"
